--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -11,22 +11,8 @@
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-            <% if(maintenanceStatus == false){ %>
-            <span class="mdl-layout-title">Discord Bot Dashboard &raquo; Dashboard</span>
-            <% }else{ %>
-            <span class="mdl-layout-title">Discord Bot Dashboard &raquo; Dashboard <span class="maintenanceActive">Maintenance is active!</span></span>
-            <% } %>
-            <div class="mdl-layout-spacer"></div>
-            <%- include('./templates/nav'); %>
-        </div>
-    </header>
-    <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Dashboard</span>
         <%- include('./templates/nav'); %>
-    </div>
+<div>
     <main class="mdl-layout__content">
         <!-- page content -->
         <div class="page-content">
