--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="shortcut icon" type="image/png" href="https://i.imgur.com/jyGY3Y9.png" />
     <meta charset="UTF-8">
-    <title>Page not found!</title>
+    <title>ERROR!</title>
     <style>
         body{
             background: #121212;
         }
         h1{
-            font-size: 300px;
+            font-size: 155px;
             font-family: sans-serif;
             font-weight: 800;
             text-align: center;
@@ -23,10 +24,33 @@
             font-weight: bold;
             margin: 0;
         }
+        .link {
+            text-align: center;
+            font-weight: bold;
+            font-family: verdana;
+        }
+    a:link {
+    color: white;
+    }
+    
+/* visited link */
+a:visited {
+    color: white;
+}
+/* mouse over link */
+a:hover {
+    color: #0057A0;
+}
+/* selected link */
+a:active {
+    color: lightblue;
+}
     </style>
 </head>
 <body>
+    <img src="https://promoboxx.com/compare/images/broken_robot.png" style="width: 350px; height: 350px; position: relative; left: 42%; top: 150px;"/>
     <h1>404</h1>
-    <p>Sorry, this page can't be found...</p>
+    <p>Sorry, this page can't be found...</p><br>
+    <a href="/home"><h3 class="link">Return to homepage</h3></a>
 </body>
 </html>
