--- a/views/botStatus.ejs
+++ b/views/botStatus.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Discord Bot Dashboard</title>
+<link rel="shortcut icon" type="image/png" href="https://i.imgur.com/jyGY3Y9.png" />    <meta charset="UTF-8">
+    <title>Status</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
@@ -11,28 +11,8 @@
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-            <% if(maintenanceStatus == false){ %>
-            <span class="mdl-layout-title">Discord Bot Dashboard &raquo; Status Page</span>
-            <% }else{ %>
-            <span class="mdl-layout-title">Discord Bot Dashboard &raquo; Status Page <span class="maintenanceActive">Maintenance is active!</span></span>
-            <% } %>
-            <div class="mdl-layout-spacer"></div>
-            <nav class="mdl-navigation mdl-layout--large-screen-only">
-                <a class="mdl-navigation__link" href="/">Home</a>
-                <a class="mdl-navigation__link" href="/messages">Messages</a>
-                <a class="mdl-navigation__link" href="/botStatus">Status</a>
-            </nav>
-        </div>
-    </header>
-    <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Dashboard</span>
-        <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="">Home</a>
-        </nav>
-    </div>
+        <%- include('./templates/nav'); %>
+<div>
     <main class="mdl-layout__content">
         <!-- page content -->
         <div class="page-content">
