--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,117 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Discord Bot Dashboard</title>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <meta name="author" content="Julian Yaman">
-    <meta name="description" content="A tool for Discord.js bot developers to manage their bot for development and final release usages.">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../src/styles.css">
+
 </head>
+
 <body>
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-            <% if(maintenanceStatus == false){ %>
-            <span class="mdl-layout-title">Discord Bot Dashboard &raquo; Dashboard</span>
-            <% }else{ %>
-            <span class="mdl-layout-title">Discord Bot Dashboard &raquo; Dashboard <span class="maintenanceActive">Maintenance is active!</span></span>
-            <% } %>
-            <div class="mdl-layout-spacer"></div>
-            <%- include('./templates/nav'); %>
-        </div>
-    </header>
-    <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Dashboard</span>
-        <%- include('./templates/nav'); %>
-    </div>
-    <main class="mdl-layout__content">
-        <!-- page content -->
-        <div class="page-content">
-            <div class="mdl-grid">
-                <div class="mdl-cell mdl-cell--2-col"></div>
-                <div class="mdl-cell mdl-cell--8-col">
-                    <h1><b>Home</b></h1>
-                    <hr>
-                    <div class="botFunctionWidget botFunctionWidget_quickFunctions">
-                        <h4><b>Game Status:</b><br><small>Change here the game from your bot.</small></h4>
-                        <form method="post" class="changeGame" action="/change-game-status">
-                            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <input class="mdl-textfield__input " type="text" name="gameStatus" id="gameChangeInput">
-                                <label class="mdl-textfield__label" for="gameChangeInput">Change Game Status..</label>
-                            </div>
-                            <button style="vertical-align: super;" type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-                                Save game status
-                            </button>
-                        </form>
-                        <hr>
-                        <h4><b>Change Status:</b><br><small>Change status of your bot.</small></h4>
-                        <form method="post" action="/change-status">
-                            <select name="status" class="botStatusSelection">
-                                <option value="<%= data.user.localPresence.status %>">Current status: <%= data.user.localPresence.status %></option>
-                                <option value="online">Online</option>
-                                <option value="idle">Idle</option>
-                                <option value="dnd">Do not Disturb</option>
-                                <option value="invisible">Invisible</option>
-                            </select>
-                            <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-                                Change Status
-                            </button>
-                        </form>
-                        <hr>
-                        <h4><b>Development:</b><br><small>Here you can add some test features for your own project. I added some functions which may be helpful for you!</small></h4>
-                        <a href="/outputClient"><button id="outputClientObjBtn" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Output Client Object</button></a>
-                        <a href="/outputGuilds"><button id="outputClientObjBtn" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Output Guilds Object</button></a>
-                        <a href="/testingNewFunction"><button id="testNewFunctionBtn" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">Testing a new function</button></a>
-                    </div>
-                    <div class="botWidget botWidget_botStatus">
-                        <h4><b>Bot Status</b></h4>
-                        <hr>
-                        <p class="bot_username"><b>Name:</b> <%= data.user.username %></p>
-                        <p class="bot_game"><b>Current game:</b> <%= data.user.localPresence.game.name %></p>
-                        <span class="bot_status"><b>Status:</b>
-                            <% if(data.user.localPresence.status === "online"){ %>
+    <%- include('./templates/nav'); %>
+
+    <div class="container justify-content-center">
+
+        <h1><b>Home</b></h1>
+        <hr>
+
+        <div class="card border-success mb-3">
+            <div class="card-header">
+                <h5 class="card-title">Bot Status</h5>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-sm-auto border-right">
+                        <p class="card-text">
+                            <p class="bot_username"><b>Name:</b> <%= data.user.username %></p>
+                            <p class="bot_game"><b>Current game:</b> <%= data.user.localPresence.game.name %></p>
+                            <span class="bot_status"><b>Status:</b>
+                                <% if(data.user.localPresence.status === "online"){ %>
                                 <div class="statusSymbol statusSymbolOnline"></div> Online
-                            <% }else if(data.user.localPresence.status === "idle"){ %>
+                                <% }else if(data.user.localPresence.status === "idle"){ %>
                                 <div class="statusSymbol statusSymbolIdle"></div> Idle
-                            <% }else if(data.user.localPresence.status === "dnd"){ %>
+                                <% }else if(data.user.localPresence.status === "dnd"){ %>
                                 <div class="statusSymbol statusSymbolDND"></div> Do Not Disturb
-                            <% }else if(data.user.localPresence.status === "invisible"){ %>
+                                <% }else if(data.user.localPresence.status === "invisible"){ %>
                                 <div class="statusSymbol statusSymbolInvisible"></div> Invisible
-                            <% }%>
-                        </span>
-                        <hr>
-                        <h4><b>Maintenance:</b></h4>
-                        <p class="warning"><b>Warning! &raquo; </b>This function is in a early status!</p>
-                        <% if(maintenanceStatus == false){ %>
-                        <button id="enableButtonForMaintanance" style="width: 100%;" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Activate Maintenance</button><br class="brMaintenance"><br class="brMaintenance">
-                        <a href="/activateMaintenance"><button style="width: 100%;" id="maintenanceActivatingButton" disabled class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">Confirming Maintenance</button></a>
-                        <% }else{ %>
-                        <a href="/deactivateMaintenance"><button style="width: 100%;" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">Deactivate Maintenance</button></a>
-                        <% } %>
+                                <% }%>
+                            </span>
+                            <hr>
+                            <h4><b>Maintenance:</b></h4>
+                            <!--<p class="warning"><b>Warning! &raquo; </b>This function is in a early status!</p>-->
+                            <% if(maintenanceStatus == false){ %>
+                            <button id="enableButtonForMaintanance" style="width: 100%;" class="btn btn-danger">Activate
+                                Maintenance</button><br class="brMaintenance"><br class="brMaintenance">
+                            <a href="/activateMaintenance"><button style="width: 100%;" id="maintenanceActivatingButton"
+                                    disabled class="btn">Confirming Maintenance</button></a>
+                            <% }else{ %>
+                            <a href="/deactivateMaintenance"><button style="width: 100%;"
+                                    class="btn btn-success">Deactivate Maintenance</button></a>
+                            <% } %>
+                        </p>
                     </div>
-                    <br>
-                    <div class="botWidget botVersionWidget">
-                        <h4><b>Version: <%= botData.bot_version %></b></h4>
-                        <hr>
-                        <p><b>TODO List:</b></p>
-                        <small>// TODO: Add function to change bot_version</small><br>
-                        <small>// TODO: Adding ToDO List for developers (new page)</small><br>
-                        <small>// TODO: Improving Development Section</small><br>
-                        <small>// TODO: Adding Status Log for the status page</small><br>
-                        <small>// TODO: Adding Log In</small>
+
+                    <div class="col-sm-auto">
+                        <p class="card-text">
+                            <h4><b>Game Status:</b><br><small>Change here the game from your bot.</small></h4>
+                            <form method="post" class="changeGame" action="/change-game-status" class="form-inline">
+                                <div class="input-group mb-3">
+                                    <input class="form-control" type="text" name="gameStatus" id="gameChangeInput">
+                                    <div class="input-group-append">
+                                        <button type="submit" class="btn btn-primary">Save Game Status</button>
+                                    </div>
+                                </div>
+                            </form>
+
+                            <hr>
+                            <h4><b>Change Status:</b><br><small>Change status of your bot.</small></h4>
+                            <form method="post" action="/change-status" class="form-inline">
+                                <div class="input-group mb-3">
+                                    <select class="form-control" name="status">
+                                        <option value="<%= data.user.localPresence.status %>">Current status:
+                                            <%= data.user.localPresence.status %></option>
+                                        <option value="online">Online</option>
+                                        <option value="idle">Idle</option>
+                                        <option value="dnd">Do not Disturb</option>
+                                        <option value="invisible">Invisible</option>
+                                    </select>
+                                    <div class="input-group-append">
+                                        <button type="submit" class="btn btn-primary">
+                                            Change Status
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+                            <hr>
+                            <h4><b>Development:</b><br><small>Here you can add some test features for your own project.
+                                    I added some functions which may be helpful for you!</small></h4>
+                            <a href="/outputClient"><button id="outputClientObjBtn" class="btn btn-secondary">Output
+                                    Client Object</button></a>
+                            <a href="/outputGuilds"><button id="outputClientObjBtn" class="btn btn-secondary">Output
+                                    Guilds Object</button></a>
+                            <a href="/testingNewFunction"><button id="testNewFunctionBtn" class="btn btn-info">Testing a
+                                    new function</button></a>
+                        </p>
                     </div>
-                </div>
-                <div class="mdl-cell mdl-cell--2-col">
+
                 </div>
             </div>
         </div>
-    </main>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="../scripts/dashboard.js"></script>
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="../scripts/dashboard.js"></script>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </body>
+
 </html>
