--- a/views/log.ejs
+++ b/views/log.ejs
@@ -8,34 +8,15 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <meta name="author" content="Julian Yaman">
     <meta name="description" content="A tool for Discord.js bot developers to manage their bot for development and final release usages.">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../src/styles.css">
 </head>
 <body>
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-            <% if(maintenanceStatus == false){ %>
-            <span class="mdl-layout-title">Discord Bot Dashboard &raquo; Dashboard</span>
-            <% }else{ %>
-            <span class="mdl-layout-title">Discord Bot Dashboard &raquo; Dashboard <span class="maintenanceActive">Maintenance is active!</span></span>
-            <% } %>
-            <div class="mdl-layout-spacer"></div>
-            <%- include('./templates/nav'); %>
-        </div>
-    </header>
-    <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Dashboard</span>
         <%- include('./templates/nav'); %>
-    </div>
-    <main class="mdl-layout__content">
-        <!-- page content -->
-        <div class="page-content">
-            <div class="mdl-grid">
-                <div class="mdl-cell mdl-cell--2-col"></div>
-                <div class="mdl-cell mdl-cell--8-col">
+        <div class="container justify-content-center">
+
                     <h1><b>Bot Log</b></h1>
                     <hr>
-                    <div class="logContainer">
+                    <div class="logContainer" class="scrollbar" id="style-2">
                         <ul>
                             <% log.forEach((log) => {%>
                                 <li class="<%= "log_" + log.log_type %>">
@@ -92,12 +73,10 @@
                             <% });%>
                         </ul>
                     </div>
-                </div>
-                <div class="mdl-cell mdl-cell--2-col">
-                </div>
-            </div>
-        </div>
-    </main>
+            
+               
+          
+  
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="../scripts/dashboard.js"></script>
