--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -1,8 +1,95 @@
-<nav class="mdl-navigation mdl-layout--large-screen-only">
+<!--<nav class="mdl-navigation mdl-layout--large-screen-only">
     <a class="mdl-navigation__link" href="/">Home</a>
     <a class="mdl-navigation__link" href="/messages">Messages</a>
     <a class="mdl-navigation__link" href="/log">Bot Log</a>
     <a class="mdl-navigation__link" href="/manage">Manage your Bot</a>
     <a class="mdl-navigation__link" href="/development">Development</a>
     <a class="mdl-navigation__link" href="/botStatus">Status</a>
-</nav>
+</nav>-->
+
+<!DOCTYPE html> 
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="SubiBot" />
+    <title>Discord Bot Dashboard</title>
+    <meta property="og:title" content="<%= data.user.username %> Dashboard" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="SubiBot" /> <!--This redirects to the this site no matter what link-->
+    <meta property="og:image" content="<%= data.user.displayAvatarURL %>"/>
+    <meta property="og:site_name" content="<%= data.user.username %> Dashboard">
+    <meta property="og:locale" content="en_US">
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.1/moment.min.js" integrity="sha256-zG8v+NWiZxmjNi+CvUYnZwKtHzFtdO8cAKUIdB8+U9I=" crossorigin="anonymous"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="../../src/dashboard.css">
+    <link rel="stylesheet" href="../../src/darkly.css" />
+    <link rel='icon' href='<%= data.user.avatarURL %>'>
+
+
+    <title><%= data.user.username %></title>
+  </head>
+  <body>
+    <!--<a name="top"></a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="margin-bottom: 20px;">-->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+     <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar01" aria-controls="navbar01" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button> --> 
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+            <img src="<%= data.user.avatarURL %>" class="d-inline-block align-top rounded-circle" alt="" style="width:40px;"> <%= data.user.username %>
+        </a>
+        
+         <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar01">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+                
+        <div class="collapse navbar-collapse" id="navbar01">
+         <!-- <ul class="navbar-nav mr-auto">
+            <li class="nav-item"><a class="nav-link" href="/commands">Commands</a></li>
+            <li class="nav-item"><a class="nav-link" href="/stats">On <%= data.guilds.size %> Servers</a></li>
+          </ul>
+          <ul class="navbar-nav">
+          </ul>-->
+        <ul class="navbar-nav">     
+                <li class="nav-item">
+                     <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/commands">Commands</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/messages">Messages</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/log">Bot Log</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/manage">Manage your Bot</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/development">Development</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/stats">On <%= data.guilds.size %> Servers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/botStatus">Status</a>
+                </li>    
+              </ul> 
+                <ul class="navbar-nav ml-auto">
+                        <% if(maintenanceStatus == true){ %>
+                            <h4 style="margin-right:10px;"><span class="badge badge-pill badge-danger"><span class="maintenanceActive">Maintenance is active!</span></span></h4>
+                            <% } %>
+                        <li class="nav-item"><a href="/login" class="nav-link"><i class="fa fa-key" aria-hidden="true"></i> Login</a></li>
+                </ul>
+        </div>
+      </div>
+    </nav>
