--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -82,13 +82,18 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/botStatus">Status</a>
-                </li>    
-              </ul> 
+                </li> 
+              </ul>  
                 <ul class="navbar-nav ml-auto">
                         <% if(maintenanceStatus == true){ %>
                             <h4 style="margin-right:10px;"><span class="badge badge-pill badge-danger"><span class="maintenanceActive">Maintenance is active!</span></span></h4>
                             <% } %>
-                        <li class="nav-item"><a href="/login" class="nav-link"><i class="fa fa-key" aria-hidden="true"></i> Login</a></li>
+                            <% if(member) { %> 
+                              <li class="nav-item" style="margin-top: 8px"><a href="/profile"><b><%= member.username %>#<%= member.discriminator %></b></a></li>
+                                <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>         
+                            <% } else { %>
+                              <li class="nav-item"><a href="/login" class="nav-link"><i class="fa fa-key" aria-hidden="true"></i> Login</a></li>
+                              <% } %>          
                 </ul>
         </div>
       </div>
