--- a/src/styles.css
+++ b/src/styles.css
@@ -169,8 +169,10 @@ body{
 
 /* ===== Log Page ===== */
 .logContainer{
-    background: #e3eaee;
+    background: #303030;;
     padding: 2%;
+    overflow-y: scroll;
+    max-height: 600px;
 }
 .logContainer ul{
     list-style-type: none;
@@ -180,7 +182,7 @@ body{
 .logContainer ul li {
     padding: 1%;
     border-radius: 0 4px 4px 0;
-    background: #cbd2d6;
+    background: #444;
     margin-bottom: 5px;
     font-size: 16px;
 }
@@ -255,4 +257,80 @@ body{
 }
 .commandAvailableInMaintenanceTrue{
     background-color: #2ECC71;
+}
+
+/*scrollbars*/
+#style-1::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
+/*
+ *  STYLE 2
+ */
+
+#style-2::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+#style-2::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+#style-2::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
+#style-3::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
+#style-4::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	
+	background-color: #F5F5F5;
+}
+
+#style-4::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+#style-4::-webkit-scrollbar-thumb
+{
+	
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
+#style-8::-webkit-scrollbar-track
+{
+	border: 1px solid black;
+	background-color: #F5F5F5;
+}
+
+#style-8::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+#style-8::-webkit-scrollbar-thumb
+{
+	background-color: #000000;	
 }
