--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -75,26 +75,35 @@
                     <a class="nav-link" href="/manage">Manage your Bot</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/development">Development</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="/stats">On <%= data.guilds.size %> Servers</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/botStatus">Status</a>
                 </li> 
               </ul>  
-                <ul class="navbar-nav ml-auto">
-                        <% if(maintenanceStatus == true){ %>
-                            <h4 style="margin-right:10px;"><span class="badge badge-pill badge-danger"><span class="maintenanceActive">Maintenance is active!</span></span></h4>
-                            <% } %>
-                            <% if(member) { %> 
-                              <li class="nav-item" style="margin-top: 8px"><a href="/profile"><b><%= member.username %>#<%= member.discriminator %></b></a></li>
-                                <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>         
-                            <% } else { %>
-                              <li class="nav-item"><a href="/login" class="nav-link"><i class="fa fa-key" aria-hidden="true"></i> Login</a></li>
-                              <% } %>          
+              <ul class="navbar-nav ml-auto">
+                  <% if(maintenanceStatus == true){ %>
+                    <h4 style="margin-right:10px;"><span class="badge badge-pill badge-danger"><span class="maintenanceActive">Maintenance is active!</span></span></h4>
+                    <% } %>
+                  <% if(member) { %>
+                    <li class="dropdown">
+                      <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= member.username %>#<%=member.discriminator %></a>
+                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                        <h6 class="dropdown-header"><i class="fa fa-user" aria-hidden="true"></i> <%= member.username %></h6>
+                        <a class="dropdown-item" href="/profile"><i class="fa fa-cogs" aria-hidden="true"></i> Profile</a>
+                        <% if(member.username === data.appInfo.owner.username) { %>
+                          <a class="dropdown-item" href="/dashboard"><i class="fa fa-key"></i> Dashboard</a>
+                        <% } %>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/logout"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
+                      </div>
+                    </li>
+                  <% } else { %>
+                    <li class="nav-item"><a href="/login" class="nav-link"><i class="fa fa-key" aria-hidden="true"></i> Login</a></li>
+                  <% } %>
                 </ul>
+
+
         </div>
       </div>
     </nav>
