--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -83,7 +83,7 @@
               </ul>  
               <ul class="navbar-nav ml-auto">
                   <% if(maintenanceStatus == true){ %>
-                    <h4 style="margin-right:10px;"><span class="badge badge-pill badge-danger"><span class="maintenanceActive">Maintenance is active!</span></span></h4>
+                    <h4 style="margin-right:10px;"><span class="maintenanceActive" class="badge badge-danger">Maintenance is active!</span></h4>
                     <% } %>
                   <% if(member) { %>
                     <li class="dropdown">
