--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -39,7 +39,7 @@
   <body>
     <!--<a name="top"></a>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="margin-bottom: 20px;">-->
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
      <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar01" aria-controls="navbar01" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button> --> 
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
