--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -91,9 +91,11 @@
                       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                         <h6 class="dropdown-header"><i class="fa fa-user" aria-hidden="true"></i> <%= member.username %></h6>
                         <a class="dropdown-item" href="/profile"><i class="fa fa-cogs" aria-hidden="true"></i> Profile</a>
-                        <% if(member.username === data.appInfo.owner.username) { %>
+                        <%  var mem = server.members.find(m => m.user.username === member.username);
+                        if(mem.roles.some(r=> [adminRole, modRole].includes(r.name)) ){ %>
                           <a class="dropdown-item" href="/dashboard"><i class="fa fa-key"></i> Dashboard</a>
-                        <% } %>
+                        <%
+                        }%> 
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/logout"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
                       </div>
