--- a/views/commands.ejs
+++ b/views/commands.ejs
@@ -18,16 +18,10 @@
     <br>
      <div class=row style="margin-top:10px">
        <div class="col-3">
-          <h1><b>Commands</b></h1>
+          <br><div class="page-header"> <h1><b>Commands</b></h1>
           <h5>Legend</h5>  
-          <code>command &lt;required arg&gt; [optional arg]</code>
+          <code>command &lt;required arg&gt; [optional arg]</code></div>
        </div>
-  
-        <div class="col-8">
-          
-            
-        </div>
-    
     </div>
       <hr style="background:white">
 
