--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,15 @@
 
     <div class="container justify-content-center">
 
-        <h1><b>Home</b></h1>
-        <hr>
+        <div class=row style="margin-top:10px">
+            <div class="col-3">
+                <br>
+                <div class="page-header">
+                    <h1><b>Home</b></h1>
+                </div>
+            </div>
+        </div>
+        <hr style="background:white">
 
         <div class="jumbotron">
             <h1 class="display-3"><%=data.user.username %></h1>
