--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -20,8 +20,15 @@
         <!-- page content -->
 
 
-        <h1><b>Messages</b></h1>
-        <hr>
+        <div class=row style="margin-top:10px">
+                <div class="col-3">
+                    <br>
+                    <div class="page-header">
+                        <h1><b>Messages</b></h1>
+                    </div>
+                </div>
+            </div>
+            <hr style="background:white">
 
         <div class="card text-white bg-secondary">
             <div class="card-header">
