--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,10 +16,28 @@
 
     <div class="container justify-content-center">
 
-        <h1><b><%= member.username %>#<%= member.discriminator %>'s Profile</b></h1>
-        <hr>
+        <div class=row style="margin-top:10px">
+            <div class="col-3">
+                <br>
+                <div class="page-header">
+                    <h1><b>Profile</b></h1>
+                </div>
+            </div>
+        </div>
+        <hr style="background:white">
 
-       
+        <div class="card bg-primary">
+                <div class="card-body text-center">
+                   <h3><%= member.username %>#<%= member.discriminator %></div></h3>
+                    <p class="card-text">
+                    <div class="col-3">
+                         <img src="https://cdn.discordapp.com/avatars/<%= member.id %>/<%= member.avatar %>.png"  width="100px">
+                    </div>
+                    </p>
+                </div>
+            </div>
+
+
 
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
