--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -75,10 +75,7 @@
                     <a class="nav-link" href="/manage">Manage your Bot</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/stats">On <%= data.guilds.size %> Servers</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/botStatus">Status</a>
+                    <a class="nav-link" href="/status">Status</a>
                 </li> 
               </ul>  
               <ul class="navbar-nav ml-auto">
